--- a/examples/example2/index.html
+++ b/examples/example2/index.html
@@ -16,7 +16,7 @@ input,textarea,select {
 }
 </style>
 <script type="text/javascript" src="../../jquery-1.3.2.min.js"></script>
-<script type="text/javascript" src="../../jquery.jcryption-1.0.min.js" ></script>
+<script type="text/javascript" src="../../jquery.jcryption-1.0.1.js" ></script>
 <script type="text/javascript">
 
 $.fn.fillInForm = function() {
