--- a/examples/full/index.html
+++ b/examples/full/index.html
@@ -16,7 +16,7 @@ input,textarea,select {
 }
 </style>
 <script type="text/javascript" src="../../jquery-1.3.2.min.js"></script>
-<script type="text/javascript" src="../../jquery.jcryption-1.0.min.js" ></script>
+<script type="text/javascript" src="../../jquery.jcryption-1.0.1.js" ></script>
 <script type="text/javascript">
 
 $.fn.fillInForm = function() {
@@ -51,7 +51,11 @@ $(document).ready(function() {
 			if($(this).closest("tr").find("input:disabled,select:disabled,textarea:disabled").length == $(this).closest("tr").find("input,select,textarea").length) {
 				$(this).closest("tr").find("img[src*='open']").attr("src","lock.png");
 			}
-			$statusText.text("Encrypting form: "+(counter+1)+" of "+objectLength);
+			$statusText.text("Collecting form: "+(counter+1)+" of "+objectLength);
+		},
+		inputCollectorFinished:function(objectLength) {
+			$statusText.text("Form serialized ... waiting for keypair.");
+			return true;
 		},
 		encryptionCallback:function(counter,objectLength) {
 			$statusText.text("Encrytion Status: "+Math.round((counter/objectLength)*100)+"%");
@@ -89,7 +93,7 @@ $(document).ready(function() {
 <body><form action="main.php" method="post" id="fullForm" class="general">
     <fieldset>
         <legend>
-            <strong><a href="#fillWithSamples" style="color:#000000;">fill with samples</a></strong>
+            <strong><a href="#fillWithSamples" style="color:#000000;">fill with samples &raquo;</a></strong>
         </legend>
        <table border="0" cellspacing="5" cellpadding="0">
 <tbody>
